# MARS-Agents

./: .env.example  .gitignore  AGENTS_langgraph.md  AGENTS_output.md  CRAWL4AI.md  dspy_system.py  langgraph.json  langgraph_system.py  main.py  pyproject.toml  requirements.txt
backend/api/: server.py
frontend/: index.html  package-lock.json  package.json
frontend/convex/: messages.ts  schema.ts  sessions.ts  traces.ts
frontend/convex/_generated/: api.d.ts
frontend/src/: App.tsx  index.css
frontend/src/components/agent/: AgentCard.tsx  AgentGraph.tsx  AgentNode.tsx
frontend/src/components/chat/: ChatContainer.tsx  MessageBubble.tsx  TypingIndicator.tsx
frontend/src/components/landing/: InputBar.tsx  LandingScreen.tsx  QuickActions.tsx
frontend/src/components/layout/: AppShell.tsx  SessionSelector.tsx  SplitPane.tsx  TopBar.tsx
frontend/src/components/monitoring/: ScoreChart.tsx  TraceItem.tsx  TracePanel.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Icon.tsx  Input.tsx
frontend/src/hooks/: useAgentStream.ts  useConvexSession.ts
frontend/src/lib/: constants.ts  utils.ts
frontend/src/stores/: agentStore.ts  chatStore.ts  settingsStore.ts
src/: __init__.py  cli.py  dspy_agents.py  graph.py  lightning_store.py  self_improvement.py  state.py  web_search.py
src/memory/: __init__.py  base.py  dual_buffer.py  hierarchical.py  tree.py
src/optimization/: __init__.py  pareto.py  reflective_mutation.py
tests/: test_dual_buffer_memory.py  test_graph_memory.py  test_hierarchical_memory.py  test_integration_hgm_memevolve_gepa.py  test_judge_pareto.py  test_memory_base.py  test_memory_evolution.py  test_memory_tree.py  test_pareto.py  test_reflection_memory.py  test_reflective_mutation.py  test_specialist_memory.py  test_state_integration.py
(+4 files in other folders)
